# limonata-ethminer

./: README.md
.github/workflows/: build.yml
ethminer/: main.cpp
libdevcore/: CMakeLists.txt  Signer.h
libethash-cl/: CLMiner.cpp
libethash-cuda/: CUDAMiner.cpp
libethcore/: EthashAux.h  Farm.cpp
libpoolprotocols/stratum/: EthStratumClient.cpp
